<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/quarantineTxt"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:clickable="true">


    <TextView
        android:id="@+id/quarantinetTxtHeader2"
        android:layout_width="243dp"
        android:layout_height="36dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:text="@string/quarantineEstimationTxt"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quarantinetTxtHeader2" />

    <EditText
        android:id="@+id/picker"
        android:layout_width="143dp"
        android:layout_height="67dp"
        android:layout_marginStart="184dp"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:hint="@string/pickDateTxt"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/remainingTimeTxt4"
        android:layout_width="182dp"
        android:layout_height="66dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="72dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/startOfQuarantineTxt"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/quarantinetTxtHeader"
        android:layout_width="243dp"
        android:layout_height="36dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="356dp"
        android:gravity="center_horizontal|center_vertical"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/remainingTimeTxt"
        android:layout_width="182dp"
        android:layout_height="66dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="140dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/endOfQuarantineTxt"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="142dp"
        android:layout_height="64dp"
        android:layout_marginStart="184dp"
        android:layout_marginTop="140dp"
        android:ems="10"
        android:enabled="false"
        android:inputType="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switchCoronaTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="228dp"
        android:text="@string/switchCoronaTestTxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/clearBtn"
        android:layout_width="64dp"
        android:layout_height="67dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="276dp"
        android:textColor="@color/color_white"
        app:icon="@drawable/ic_delete"
        app:iconTint="@color/color_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/callToReportButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="276dp"
        android:textColor="@color/color_white"
        app:icon="@drawable/ic_baseline_phone_24"
        app:iconTint="@color/color_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/reportOnSiteButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="276dp"
        android:layout_marginEnd="160dp"
        android:textColor="@color/color_white"
        android:textColorLink="#FFFFFF"
        app:icon="@drawable/globe"
        app:iconTint="@color/color_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.761"
        app:layout_constraintStart_toEndOf="@+id/callToReportButton"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>